[gd_scene load_steps=4 format=3 uid="uid://bvoenhbaqiqj2"]

[ext_resource type="Script" path="res://scripts/towers/placement/placement.gd" id="1_4v8tt"]
[ext_resource type="Texture2D" uid="uid://n3s2excibc4g" path="res://assets/spritesheets/placement.png" id="2_06tg2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hi6ti"]
radius = 32.0156

[node name="placement" type="StaticBody2D"]
input_pickable = true
script = ExtResource("1_4v8tt")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_06tg2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_hi6ti")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_hold"]
[connection signal="mouse_exited" from="." to="." method="_on_release"]
